blueprints/orion-deploy-svc.archived/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-deploy-svc
  namespace: orion
  labels:
    app: orion-deploy
    component: deploy-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3003
      protocol: TCP
      name: http
  selector:
    app: orion-deploy
---
apiVersion: v1
kind: Service
metadata:
  name: orion-deploy-svc-headless
  namespace: orion
  labels:
    app: orion-deploy
    component: deploy-service
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
      name: http
  selector:
    app: orion-deploy
